done: 2nd reference for theory reasongs for non-exp nuclear modulus
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11366 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/bibliography.tex
+++ b/2013/1km paper/bibliography.tex
@@ -26,7 +26,7 @@
 
 
 \bibitem{wy68}
-	\Name{WEST, G. B. and YENNIE, D. R.}
+	\Name{West, G. B. and Yennie, D. R.}
 	%title     = "Coulomb interference in high-energy scattering",
 	\REVIEW{Phys. Rev.}{172}{1968}{1413--1422}
 	%doi       = "10.1103/PhysRev.172.1413",
@@ -185,7 +185,12 @@
 	% Forward hadronic scattering at 8 TeV: Predictions for the LHC
 	\Name{Martin M. Block and Francis Halzen}
 	\REVIEW{Phys.~Rev.~D}{86}{2012}{014006}
-	
+
+\bibitem{kmr12-opacity}
+	%Proton opacity in the light of LHC diffractive data
+	\Name{Ryskin, M.~G., Martin, A.~D.~and Khoze, V.~A.}
+	\REVIEW{Eur.~Phys.~J.~C}{72}{2012}{1937}
+	%doi={10.1140/epjc/s10052-012-1937-x},
 
 
 % TODO: remove unnecessary references
