--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -259,7 +259,7 @@ Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentiall
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
 \begin{itemize}
-\item There are several theoretical reasons for the nuclear component being non-exponential \cite{kmr15-slope} \TODO{2nd reference}. Indeed, most elastic scattering models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}.
+\item There are several theoretical reasons for the nuclear component being non-exponential, e.g.~\cite{kmr12-opacity,kmr15-slope}. Indeed, most elastic scattering models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}.
 \item The value of $\rho$ obtained in this fit constitutes an outlier with respect to a consistent pattern of other fits from this report and extrapolations from lower energies: e.g.~\cite{fagundes11,block12,compete} and most models in \cite{elegent}.
 \end{itemize}
 Let us also recall that the good quality of this fit is possible due to the more complex KL formula where the CNI effects go beyond an additional phase in the traditional SWY concept.
