--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -1,16 +1,29 @@
 \section{Summary and Outlook}
+\label{sec:summary}
+For the first time at LHC the differential cross-section of elastic proton-proton scattering has been measured at $|t|$-values down to the Coulomb-nuclear interference (CNI) region. This was made possible by a special beam optics, a novel collimation procedure and by moving the RPs to an unprecedented distance of only 
+$3\,\sigma$ from the beam centre.
 
-\> differential cross-section measurement summary
-\>> first time at LHC: $|t|$ down to the Coulomb-interference region
-\>>> RPs extremely close to beam (unprecedented)
-\>>> novel collimation procedure
+%\> differential cross-section measurement summary
+%\>> first time at LHC: $|t|$ down to the Coulomb-interference region
+%\>>> RPs extremely close to beam (unprecedented)
+%\>>> novel collimation procedure
+To fit $\d\sigma/\d t$ in the CNI region, two interference formulae --
+Simplified West and Yennie (SWY), and Kundrat-Lokajicek (KL) -- 
+were explored in 
+conjunction with different mathematical descriptions of the modulus and phase 
+of the hadronic amplitude as a function of $t$. The hadronic modulus was parameterised as an exponential function with a polynomial slope of degree 0 to 2 ($N_b=1$ to 3 parameters).
+For the phase two options were considered, leading to different impact 
+parameter distributions of elastic scattering events: a constant phase implying a preferentially central behaviour, and a description favouring peripheral collisions.
+The following conclusions can be drawn:
+\begin{itemize}
+\item A constant phase : excluded ...
 
+And so on ... bla ... bla 
 
-\> CNI analysis summary
-\>> $N_b=1$, constant phase: excluded
-\>>> SWY formula excluded, too
-\>> $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
-\>> $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
+SWY formula excluded, too
+\item $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
+\item $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
+\end{itemize}
 \>> summary on presented $\rho$ values?
 
 \> $\rho$
