number of small final improvements
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@11385 4525493e-7705-40b1-a816-d608a930855b

--- a/2013/1km paper/conclusions.tex
+++ b/2013/1km paper/conclusions.tex
@@ -8,7 +8,7 @@ $3\,\sigma$ from the beam centre.
 %\>>> RPs extremely close to beam (unprecedented)
 %\>>> novel collimation procedure
 To fit $\d\sigma/\d t$ in the CNI region, two interference formulae --
-Simplified West and Yennie (SWY), and Kundrat-Lokajicek (KL) -- 
+Simplified West and Yennie (SWY), and Kundr\' at-Lokaj\' i\v cek (KL) -- 
 were explored in 
 conjunction with different mathematical descriptions of the modulus and phase 
 of the hadronic amplitude as a function of $t$. The hadronic modulus was parameterised as an exponential function with a polynomial slope of degree 0 to 2 ($N_b=1$ to 3 parameters).
@@ -24,7 +24,6 @@ SWY formula excluded, too
 \item $N_b=1$, peripheral phase: can fit data, but doubtful from other perspectives
 \item $N_b=3$, both constant and peripheral phase: good description of data $\Rightarrow$ centrality is not a necessity
 \end{itemize}
-\>> summary on presented $\rho$ values?
 
 \> $\rho$
 \>> at LHC: for the first time extracted via Coulomb-interference
