--- a/2013/1km paper/coulomb.tex
+++ b/2013/1km paper/coulomb.tex
@@ -1,7 +1,7 @@
 \section{Coulomb-Nuclear Interference}
 \label{sec:coulomb}
 
-This section presents a study of the measured differential cross-section, where the Coulomb-nuclear interference (CNI) is used a tool to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. For the modulus, a relevant question is whether the earlier reported non-exponentiality of differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives an important contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested and phase value at $t = 0$ ($\rho$ parameter) will be determined.
+This section presents a study of the measured differential cross-section, where the Coulomb-nuclear interference (CNI) is used as a tool to probe the nuclear component of the scattering amplitude. Since the CNI effects are sensitive to the phase of the nuclear amplitude, both modulus and phase can be tested. For the modulus, a relevant question is whether the earlier reported non-exponentiality of differential cross-section \cite{8tev-90m} can be attributed solely to the nuclear component or whether Coulomb scattering gives an important contribution. Concerning the phase, several parametrisations with different physics interpretations will be tested and phase value at $t = 0$ will be determined (as the $\rho$ parameter).
 
 The presentation starts with Section~\ref{sec:cni framework} outlining the theoretical concepts needed to describe the CNI effects. It is followed by Section~\ref{sec:cni anal proc} providing details on fitting procedures used to analyse the data. Sections \ref{sec:fit exp1} and \ref{sec:fit exp3} discuss fit results for two relevant physics alternatives: purely exponential and non-exponential nuclear modulus.
 
@@ -91,12 +91,12 @@ Another parametrisation is by {\bf Bailly et al.}~\cite{bailly87}:
 where $t_{\rm d} \approx -0.53\un{GeV^2}$ gives the position of the diffractive minimum at $8\un{TeV}$ (preliminary result derived from the $\beta^* = 90\un{m}$ data \cite{8tev-90m}). This phase has a behaviour qualitatively similar to the model of Jenskovszky et al., see Figure~\ref{fig:phase illustration}.
 
 % ***
-The {\bf peripheral phase} \cite{kl94} provides an alternative to the above descriptions since it may yield a very different picture in the impact-parameter space. As can be seen in Figure~\ref{fig:phase illustration}, the parametrisation
+The {\bf peripheral phase} \cite{kl94} provides an alternative to the above descriptions since it may yield a very different picture in the impact-parameter space. As shown in Figure~\ref{fig:phase illustration}, the parametrisation
 \begin{equation}
 \label{eq:nuc phase per}
 \arg {\cal A}^{\rm N}(t) = {\pi\over 2} - \arctan\rho - \zeta_1 \left(- {t\over 1\un{GeV^2}} \right)^\kappa \e^{\nu t}
 \end{equation}
-can have rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and asymptotically returns to its value value at $t=0$. According to \cite{kl-8tev}, the reasonable parameter values at $\sqrt s = 8\un{TeV}$ are
+can have a rapid variation at low $|t|$, then peaks at $t = -\kappa / \nu$ and asymptotically returns to its value value at $t=0$. According to \cite{kl-8tev}, the reasonable parameter values at $\sqrt s = 8\un{TeV}$ are
 \begin{equation}
 \label{eq:nuc phase per val}
 	\zeta_1 = 800\ ,\qquad
@@ -131,7 +131,7 @@ Illustration of the effects due to the Coulomb interaction, using the KL formula
 \end{figure*}
 
 The {\bf Kundr\' at-Lokaj\' i\v cek formula (KL)} \cite{kl94} was derived in an impact parameter formalism and it is based on the additivity of eikonals. The derivation poses no limitations on nuclear amplitude and the formula naturally incorporates the electromagnetic form factor. In this treatment, the interference effect goes beyond a single phase, the $G$ quantity is complex, in general:\footnote{%
-Note that many more recent publications by the same authors contain a misprint: wrong sign in front of the second term contributing to $G(t)$.
+Note that many recent publications by the same authors contain a misprint: wrong sign in front of the second term contributing to $G(t)$.
 }
 \begin{equation}
 \label{eq:int kl}
@@ -201,7 +201,7 @@ The fits have shown extremely low sensitivity to a number of the above presented
 \item Extension of the nuclear modulus to non-measured $|t|$ region, see last paragraph in Section~\ref{sec:cni nuclear modulus}. No effect was observed when the high-$|t|$ part was altered (both shape and normalisation) nor when the size of the transition region was changed.
 \item The two variants of the KL formula, Eqs.~(\ref{eq:int kl}) and (\ref{eq:int kl exp}).
 \item Fit implementations A and B, manifesting the stability of the fit results.
-\item Fits with constant, standard and Bailly phase are practically indistinguishable. This is can be expected from Fig.~\ref{fig:cni effect} showing that the CNI effects are very similar. Therefore, later on these phases will be treated as one family represented by the constant phase.
+\item Fits with constant, standard and Bailly phase are practically indistinguishable. This can be expected from Fig.~\ref{fig:cni effect} showing that the corresponding CNI effects are very similar. Therefore, later on these phases will be treated as one family represented by the constant phase.
 \end{itemize}
 
 
@@ -259,7 +259,7 @@ Table~\ref{tab:fit exp1} shows that both fits with constant phase are essentiall
 
 Although the quality of the fit with the peripheral phase is good, this option seems disfavoured from different perspectives.
 \begin{itemize}
-\item There are several theoretical reasons for the nuclear component being non-exponential, e.g.~\cite{kmr12-opacity,kmr15-slope}. Indeed, most elastic scattering models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}.
+\item There are several theoretical reasons for the nuclear component being non-exponential, e.g.~\cite{kmr12-opacity,kmr15-slope} \TODO{add more}. Indeed, most elastic scattering models predict non-exponential nuclear modulus, see e.g.~\cite{elegent}.
 \item The value of $\rho$ obtained in this fit constitutes an outlier with respect to a consistent pattern of other fits from this report and extrapolations from lower energies: e.g.~\cite{fagundes11,block12,compete} and most models in \cite{elegent}.
 \end{itemize}
 Let us also recall that the good quality of this fit is possible due to the more complex KL formula where the CNI effects go beyond an additional phase in the traditional SWY concept.
@@ -290,7 +290,7 @@ previous fit : chi^2/ndf = 20.66/24 = 0.861, probability = 6.59E-01, significanc
 
 Since non-exponential hadronic modulus is used, the only applicable interference formula is KL.
 
-As shown in Table~\ref{tab:fit exp3}, both fits yield very reasonable fit quality and remarkably consistent values of $\rho$ which are compared to previous measurements in Fig.~\ref{fig:rho cmp exp3}.
+As shown in Table~\ref{tab:fit exp3}, both fits yield very reasonable fit quality and remarkably consistent values of $\rho$ (identical within the resolution) which are compared to previous measurements in Fig.~\ref{fig:rho cmp exp3}.
 
 Fig.~\ref{fig:fit exp3} shows that the level of Coulomb-induced effects is very different in the fits. It is much stronger in the peripheral-phase case which can be expected as the phase features faster variation in the low-$|t|$ region.
 
@@ -319,19 +319,18 @@ BOTTOM RIGHT: the effects induced by the Coulomb interaction for each of the fit
 \end{center}
 \end{figure*}
 
-Both fits give values identical with the accuracy. This new result is put in context of earlier measurements in Figure~\ref{fig:rho cmp exp3}.
 
 \begin{figure*}
 \begin{center}
 \includegraphics{fig/rho_s.pdf}
-\caption{Energy dependence of the $\rho$ parameter. The blue (green) hollow triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} -- note that most of these points were determined with the help of the SWY formula, shown inconsistent with the presented data. The hollow red dot stands for the earlier indirect determination by TOTEM \cite{epl101-tot}. The full red dot represents the two results from Table~\ref{tab:fit exp3} which are numerically identical within the accuracy. The black curve gives the preferred $\rm pp$ model by COMPETE \cite{compete}, obtained without using LHC data.
+\caption{Energy dependence of the $\rho$ parameter. The blue (green) triangles correspond to $\rm pp$ ($\rm \bar pp$) data from PDG \cite{pdg} -- note that most of these points were determined with the help of the SWY formula, shown inconsistent with the presented data. The hollow red dot stands for the earlier indirect determination by TOTEM \cite{epl101-tot}. The full red dot represents the two results from Table~\ref{tab:fit exp3} which are numerically identical within the resolution. The black curve gives the preferred $\rm pp$ model by COMPETE \cite{compete}, obtained without using LHC data.
 }%
 \label{fig:rho cmp exp3}
 \end{center}
 \end{figure*}
 
 
-The total cross-section results from the two fits in Table~\ref{tab:fit exp3} are well consistent with each other and also with previous measurements \cite{8tev-90m,epl101-el}. The slightly higher values with respect to previous analyses neglecting the Coulomb interaction are expectable as long as $\rho > 0$. This leads to negative interference at low $|t|$ which, when separated, leads to increase of nuclear cross-section intercept $a$ and thus also total cross-section, see Eq.~(\ref{eq:si tot}).
+The total cross-section results from the two fits in Table~\ref{tab:fit exp3} are well consistent with each other and also with previous measurements \cite{8tev-90m,epl101-el}. The slightly higher values with respect to previous analyses neglecting the Coulomb interaction are expectable as long as $\rho > 0$. This leads to negative interference at low $|t|$ which, when separated, leads to an increase of nuclear cross-section intercept $a$ and thus also total cross-section via Eq.~(\ref{eq:si tot}).
 
 
 It is interesting to study the fit behaviour in the impact-parameter space. The scattering amplitude in this representation (often called profile function), ${\cal P}(b)$, can be obtained from the nuclear amplitude by means of Fourrier-Bessel transform (see e.g.~\cite{klk02}):
